<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#82BDED"
    android:orientation="horizontal"
    android:backgroundTint="@color/fundo">


    <!-- Título centralizado -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:background="#03A9F4"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/plano_alimentar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/automonitoramento_titulo"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Texto Plano Alimentar -->
    <TextView
        android:id="@+id/plano_alimentar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-700dp"
        android:text="@string/plano_alimentar"
        android:textColor="#000000"
        android:textSize="24sp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="parent" />

    <!-- Texto Instruções -->
    <TextView
        android:id="@+id/instrucoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/instrucoes"
        android:textColor="#000000"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/plano_alimentar" />

    <!-- ScrollView para Tabela -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/instrucoes"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BBDEFB"
            android:stretchColumns="1,2,3,4,5,6">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#0288D1"
                    android:padding="8dp"
                    android:text="@string/refeicoes"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#0288D1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/domingo"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#0288D1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/segunda"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#0288D1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/terca"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#0288D1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/quarta"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#0288D1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/quinta"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#0288D1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/sexta"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/cafe_da_manha"
                    android:textColor="#000000" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/colacao"
                    android:textColor="#000000" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/almoco"
                    android:textColor="#000000" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/lanche"
                    android:textColor="#000000" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/jantar"
                    android:textColor="#000000" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/ceia"
                    android:textColor="#000000" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/refeicao_livre"
                    android:textColor="#000000" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

        </TableLayout>
        </HorizontalScrollView>
    </ScrollView>

    <!-- BottomNavigationView -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/home"
            android:layout_width="50dp"
            android:layout_height="49dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/botao_home"
            />

        <ImageView
            android:id="@+id/consulta"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/calendario"
            android:onClick="abrirPlano"/>

        <ImageView
            android:id="@+id/cronograma"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/tempo"
            android:onClick="abrirCronograma"
            android:contentDescription="Cronograma"/>

        <ImageView
            android:id="@+id/aval"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:layout_marginStart="330dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/estrela"
            android:contentDescription="Avaliação"
            android:onClick="abrirAvaliacao"/>

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>
