<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/fundo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Título e Subtítulo -->

            <TextView
                android:gravity="left"
                android:layout_marginTop="50dp"
                android:text="@string/texto_1"
                android:fontFamily="@font/maven_pro"
                android:layout_marginStart="20dp"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded" />

            <!-- ConstraintLayout interno com constraints para cada elemento -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:text="@string/para_sua_seguran"
                android:fontFamily="@font/maven_pro"
                android:textColor="#000000"
                android:textSize="20sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/sub_digitar_email"
                    android:fontFamily="@font/maven_pro"
                    android:textColor="#100F0F"
                    android:textSize="34sp"
                    app:layout_constraintBottom_toTopOf="@id/editTextTextEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/border_rounded"
                    android:hint="@string/button_email"
                    android:fontFamily="@font/maven_pro"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="#070707"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.443"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView3" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="175dp"
                    android:layout_height="66dp"
                    android:layout_marginTop="150dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="#3C4A53"
                    android:text="@string/button_solicitar"
                    android:onClick="esqueci1"
                    android:fontFamily="@font/maven_pro"
                    app:cornerRadius="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
